--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -237,7 +237,7 @@
             <xpath expr="//notebook/page[@name='other_information']" position="inside">
                 <group name="note_group" col="6" class="mt-2 mt-md-0">
                     <group colspan="4">
-                        <field name="note" class="oe-bordered-editor" nolabel="1" placeholder="Terms and conditions..."/>
+                        <field name="note" class="oe-bordered-editor" nolabel="1" placeholder="Terms and conditions..." readonly="1"/>
                     </group>
                 </group>
             </xpath>
