--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -21,10 +21,9 @@
         </xpath>
         <xpath expr="//div[hasclass('page')]" position="inside">
             <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
-            <!-- <t t-set="o" t-value="doc.with_context(lang=doc.partner_id.lang)" /> -->
             <t t-set="report_info" class="col-6 text-right">
                 <h3>
-                    <span t-if="env.context.get('proforma', False) or is_pro_forma">Pro-Forma Invoice</span>
+                    <span t-if="env.context.get('proforma', False) or is_pro_forma">Invoice</span>
                     <span t-elif="doc.state == 'cancel'">Cancelled Quotation/Sale Order</span>
                     <span t-elif="doc.state in ['draft', 'sent', 'quote_approval', 'quote_confirm']">Quotation</span>
                     <span t-else="">Sale Order</span>
@@ -335,5 +334,10 @@
             (object.state in ('draft','sent','quote_approval','quote_confirm') and 'Quotation - %s' % (object.name) or
             'Order - %s' % (object.name))</field>
         <field name="paperformat_id" ref="bista_sale.paperformat_quotation_sale_report" />
+    </record>
+
+    <record id="sale.action_report_pro_forma_invoice" model="ir.actions.report">
+        <field name="name">Invoice</field>
+        <field name="print_report_name">(object.name)</field>
     </record>
 </odoo>
