--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -10,6 +10,12 @@
 <!--                        <field string=" Products Sale" name="product_order_count" widget="statinfo"/>-->
 <!--                    </button>-->
 <!--            </xpath>-->
+            <xpath expr="//group/group[1]" position="before">
+                <group>
+                    <field name="external_company" />
+                </group>
+                <group></group>
+            </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button class="oe_stat_button" name="get_vendor_ordered_product" icon="fa-usd" type="object">
                     <div class="o_field_widget o_stat_info">
@@ -91,13 +97,6 @@
             <xpath expr="//page[@name='contact_addresses']/field[@name='child_ids']/form/sheet//field[@name='name']" position="after">
                 <field name="external_company"/>
             </xpath>
-            <field name="parent_id" position="after">
-                <br/>
-                <label for="external_company"/>
-                <div>
-                <field name="external_company"/>
-            </div>
-            </field>
         </field>
     </record>
     <record model="ir.ui.view" id="res_partner_tree_views">
