[#20048] Added Company logo and button on SO/Quote: send email template
(cherry picked from commit 0f87ac9fa5e53478ac224058336be9cb42e67637)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -28,6 +28,8 @@
             </xpath>
             <group name="order_details" position="inside">
                 <field name="acquirer_ids" widget="many2many_tags" options="{'no_create_edit': True, 'no_quick_create': True}" />
+                <field name="share_link" invisible="1"/>
+                <field name="button_name" invisible="1"/>
             </group>
             <xpath expr="//field[@name='partner_id']" position="attributes">
                 <attribute name="context">{'res_partner_search_mode': 'customer', 'show_address': 1, 'show_vat': True, 'always_reload':1, 'invoice_contact': True}</attribute>
