[IMP] Bug #20086 - set proper invoice & proforma on email send and also visible button based on custom sale status

--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -96,7 +96,7 @@
                         <strong>Valid Until:</strong>
                         <span t-field="doc.validity_date" t-options="{'widget': 'date'}" />
                     </div>
-                    <strong>Quoted By:</strong>
+                    <strong>Salesperson:</strong>
                     <span t-field="doc.user_id.name" />
                     <br />
                     <strong>Email:</strong>
