--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -323,9 +323,7 @@
             </div>
             <div t-if="doc.note" style="page-break-inside:avoid;">
                 <h5 style="margin-top:50px;border-bottom:solid 1px;">Order Terms and Conditions</h5>
-                <div>
-                    <span class="mb4" t-field="doc.note" style="margin-left: 50px;" />
-                </div>
+                <span t-field="doc.note" />
             </div>
         </xpath>
     </template>
@@ -349,6 +347,7 @@
     <record id="sale.action_report_pro_forma_invoice" model="ir.actions.report">
         <field name="name">Proforma Invoice</field>
         <field name="print_report_name">'Proforma - %s' % (object.name)</field>
+        <field name="paperformat_id" ref="bista_sale.paperformat_quotation_sale_report" />
     </record>
 
     <record id="action_report_sale_invoice" model="ir.actions.report">
@@ -360,5 +359,6 @@
         <field name="print_report_name">'Invoice - %s' % (object.name)</field>
         <field name="binding_model_id" ref="model_sale_order" />
         <field name="binding_type">report</field>
+        <field name="paperformat_id" ref="bista_sale.paperformat_quotation_sale_report" />
     </record>
 </odoo>
