[#20100] Updated TnC in production and added label
(cherry picked from commit d8188b49335856a926beefa961a23cd3d96d220a)

--- a/bista_purchase/views/account_move_views.xml
+++ b/bista_purchase/views/account_move_views.xml
@@ -17,6 +17,9 @@
                 <attribute name="readonly">1</attribute>
                 <attribute name="force_save">1</attribute>
             </xpath>
+            <xpath expr="//group[hasclass('oe_invoice_lines_tab')]/group[1]" position="attributes">
+                <attribute name="string">Terms and conditions</attribute>
+            </xpath>
             <xpath expr="//group[hasclass('oe_invoice_lines_tab')]" position="after">
                 <group name="invoice_pick_note"  class="mt-2 mt-md-0" style="word-wrap: break-word;">
                     <group>
