--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -255,7 +255,7 @@
             </xpath>
             <xpath expr="//notebook/page[@name='other_information']" position="inside">
                 <group name="note_group" col="6" class="mt-2 mt-md-0">
-                    <group colspan="4">
+                    <group colspan="4" string="Terms and conditions">
                         <field name="note" class="oe-bordered-editor" nolabel="1" placeholder="Terms and conditions..." readonly="1" force_save="1"/>
                     </group>
                 </group>
