--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -37,12 +37,12 @@
             <xpath expr="//field[@name='partner_invoice_id']" position="attributes">
                 <attribute name="string">Billing Address</attribute>
                 <attribute name="domain">['|',('id', '=', partner_id),
-                        '|',('id', 'child_of', partner_id), ('id', 'parent_of', partner_id)]</attribute>
+                        '|',('id', 'child_of', partner_id),('parent_id.child_ids', '=', partner_id)]</attribute>
                 <attribute name="context">{'default_type':'invoice', 'show_address':1, 'always_reload':1,'invoice_contact': True}</attribute>
            </xpath>
            <xpath expr="//field[@name='partner_shipping_id']" position="attributes">
                <attribute name="domain">['|',('id', '=', partner_id),
-                        '|',('id', 'child_of', partner_id), ('id', 'parent_of', partner_id),('is_multi_ship', 'in', (True, False))]</attribute>
+                        '|',('id', 'child_of', partner_id),('parent_id.child_ids', '=', partner_id),('is_multi_ship', 'in', (True, False))]</attribute>
                <attribute name="context">{'default_type':'delivery', 'show_address':1, 'always_reload':1, 'shipment_contact': True}</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="after">
