[#20185] Updated Context for Sales Person

--- a/bista_sales_approval/views/sale_order_approval_button_view.xml
+++ b/bista_sales_approval/views/sale_order_approval_button_view.xml
@@ -121,7 +121,7 @@
     </record>
 
     <record id="sale.action_orders" model="ir.actions.act_window">
-        <field name="context">{"order_booked": True, 'manual_update':1}</field>
+        <field name="context">{"order_booked": True, 'manual_update': True}</field>
         <field name="domain">["|", ("state", "not in", ("draft", "quote_approval", "cancel")), ("is_order", "=", True)]</field>
     </record>
 
