[IMP] Enhancements #19863 - adjustment print check report
(cherry picked from commit 2db4d097fe787592ddb220d38c3bf2c2dee660cf)

--- a/bista_check_printing/static/src/scss/report_check.scss
+++ b/bista_check_printing/static/src/scss/report_check.scss
@@ -1,3 +1,6 @@
+.ckus_top_page .ckus_stub_1 {
+    top: 3.5in;
+}
 .ckus_top_page .ckus_date {
     left: 6in;
     width: 1.5in;
@@ -7,12 +10,13 @@
     left: 0.95in;
 }
 .ckus_top_page .ckus_amount {
-    top: 1.45in;
+    top: 1.44in;
     left: 6in;
     width: 1.5in;
     text-align: center;
 }
 .ckus_top_page .ckus_amount_in_word {
+    top: 1.44in;
     font-weight: normal;
     left: 0.65in;
 }
