[20214]Fixed the Update Order BC to Odoo to Not change the Salesperson
(cherry picked from commit c385f477e5233d8b6806e11bd2d1cd9a7f3b8eec)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -339,6 +339,6 @@
 
 <!--    for restrict sales person changes-->
     <record id="sale.action_quotations_with_onboarding" model="ir.actions.act_window">
-        <field name="context">{'search_default_my_quotation': 1, 'manual_update':1}</field>
+        <field name="context">{'search_default_my_quotation': 1}</field>
     </record>
 </odoo>
