[20212] Added new 'Approved by AM to Process' checkbox field
(cherry picked from commit 524ab75474e1cf1bdf37ebaea1a0255ed1ce6501)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -163,6 +163,7 @@
                             <field name="white_glove_id" options="{'no_create': True, 'no_open': True}"/>
                             <field name="ce_notes" />
                             <field name="am_notes" />
+                            <field name="approved_by_am" />
                             <field name="ce_ops_acct_notes"/>
                         </group>
                     </group>
