--- a/bigcommerce_odoo_integration/wizard/export_and_update_product_to_bc.xml
+++ b/bigcommerce_odoo_integration/wizard/export_and_update_product_to_bc.xml
@@ -13,7 +13,7 @@
                             string="Update Product in BC" type="object" class="btn-primary" groups="bigcommerce_odoo_integration.group_hide_export_button"/>
                     <button name="export_product_in_bigcommerce" id="export_product_in_bigcommerce_btn" groups="bigcommerce_odoo_integration.group_hide_export_button"
                             string="Export Product To BC" type="object" class="btn-primary"/>
-                    <button name="update_product_from_bc_to_odoo" id="update_product_from_bc_to_odoo"
+                    <button name="update_product_from_bc_to_odoo" id="update_product_from_bc_to_odoo" context="{'from_bc_to_odoo': True}"
                             string="Update Product To ODOO" type="object" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary" special="cancel"/>
                 </footer>
