[MOM:6 april point 9]PO status report > added Billing status column and added partially Billed value
(cherry picked from commit f8b7b9b71853e948f4138b11b993a4038d70b13c)

--- a/bista_orders_report/views/purchase_order_line_view.xml
+++ b/bista_orders_report/views/purchase_order_line_view.xml
@@ -28,6 +28,7 @@
                 <field name="taxes_id" widget="many2many_tags" optional="hide" readonly="1" />
                 <field name="price_tax" optional="hide" widget="monetary"/>
                 <field name="price_total" optional="hide" widget="monetary"/>
+                <field name="invoice_status" optional="show"/>
             </tree>
         </field>
     </record>
