[IMP] Enhancements #19863 - updated check prining pdf changes

--- a/bista_check_printing/static/src/scss/report_check.scss
+++ b/bista_check_printing/static/src/scss/report_check.scss
@@ -6,25 +6,26 @@
     width: 1.5in;
 }
 .ckus_top_page .ckus_payee_name {
-    top: 0.84in;
+    top: 0.54in;
     left: 0.95in;
+    display: none;
 }
 .ckus_top_page .ckus_amount {
-    top: 1.4in;
+    top: 1.05in;
     left: 6in;
     width: 1.5in;
     text-align: center;
 }
 .ckus_top_page .ckus_amount_in_word {
-    top: 1.4in;
+    top: 1.05in;
     font-weight: normal;
     left: 0.65in;
 }
 .ckus_top_page .ckus_payee_addr {
-    top: 1.75in;
-    left: 0.95in;
+    top: 1.4in;
+    left: 0.65in;
 }
 .ckus_top_page .ckus_memo {
-    top: 2.4in;
-    left: 0.7in;
+    top: 2in;
+    left: 0.65in;
 }
